--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,12 @@
-/* Start of Tic Tac Toe CSS */ 
+/* Start of Tic Tac Toe CSS */
+html, body {
+  height: 100%;
+}
+
+body {
+  align-items: center;
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  margin: 0;
+}
