--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,8 @@ body {
   align-items: center;
   background-color: black;
   display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
   justify-content: center;
   margin: 0;
 }
@@ -25,4 +27,7 @@ body {
   height: 100%;
   background-color: none;
   display: hidden;
+}
+
+#board
 }
